change in cors configuration t-5